v1.0.0/modules/schema/pages/class/CRRMarket.adoc
= `CRRMarket`
:toclevels: 4


+++Model that describes the Congestion Revenue Rights Auction Market.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CRRMarket`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Market.adoc[`Market`]
*** *`CRRMarket`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
CRRMarket {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



CongestionRevenueRight {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketRun {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketProduct {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketFactors {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




CRRMarket -> CongestionRevenueRight: CongestionRevenueRight


CRRMarket -> MarketRun: MarketRun


CRRMarket -> MarketProduct: MarketProducts


CRRMarket -> MarketFactors: MarketFactors


CRRMarket -> DiagramObject: DiagramObjects


CRRMarket -> InstanceSet: InstanceSet


CRRMarket -> Name: Names


CRRMarket -> ChangeSetMember: PropertiesCIMDataObject


CRRMarket -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<CongestionRevenueRight,`CongestionRevenueRight`>>
| 1..*
| xref::class/CongestionRevenueRight.adoc[`CongestionRevenueRight`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<MarketProducts,`MarketProducts`>>
| 1..*
| xref::class/MarketProduct.adoc[`MarketProduct`]
| n/a

| <<labelID,`labelID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++labelID - an ID for a set of apnodes/pnodes used in a CRR market+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<actualEnd,`actualEnd`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Market ending time - actual market end+++

| <<actualStart,`actualStart`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Market starting time - actual market start+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<dst,`dst`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if daylight savings time (DST) is in effect.+++

| <<end,`end`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Market end time.+++

| <<localTimeZone,`localTimeZone`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Local time zone.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<start,`start`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Market start time.+++

| <<status,`status`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Market Status 
'OPEN', 'CLOSED', 'CLEARED', 'BLOCKED'+++

| <<timeIntervalLength,`timeIntervalLength`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Trading time interval length.+++

| <<tradingDay,`tradingDay`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Market trading date+++

| <<tradingPeriod,`tradingPeriod`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Trading period that describes the market, possibilities could be for an Energy Market:
Day
Hour

For a CRR Market:
Year
Month
Season+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<MarketFactors,`MarketFactors`>>
| 0..*
| xref::class/MarketFactors.adoc[`MarketFactors`]
| n/a

| <<MarketRun,`MarketRun`>>
| 0..*
| xref::class/MarketRun.adoc[`MarketRun`]
| n/a

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#actualEnd]
=== `actualEnd`
+++Market ending time - actual market end+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.actualEnd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#actualStart]
=== `actualStart`
+++Market starting time - actual market start+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.actualStart`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#CongestionRevenueRight]
=== `CongestionRevenueRight`


[cols="h,4",width=65%]
|===
| URI
| `cim:CRRMarket.CongestionRevenueRight`
| Cardinality
| 1..*
| Type
| xref::class/CongestionRevenueRight.adoc[`CongestionRevenueRight`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dst]
=== `dst`
+++True if daylight savings time (DST) is in effect.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.dst`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#end]
=== `end`
+++Market end time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.end`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#labelID]
=== `labelID`
+++labelID - an ID for a set of apnodes/pnodes used in a CRR market+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CRRMarket.labelID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#localTimeZone]
=== `localTimeZone`
+++Local time zone.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.localTimeZone`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#MarketFactors]
=== `MarketFactors`


[cols="h,4",width=65%]
|===
| URI
| `cim:Market.MarketFactors`
| Cardinality
| 0..*
| Type
| xref::class/MarketFactors.adoc[`MarketFactors`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#MarketProducts]
=== `MarketProducts`


[cols="h,4",width=65%]
|===
| URI
| `cim:Market.MarketProducts`
| Cardinality
| 1..*
| Type
| xref::class/MarketProduct.adoc[`MarketProduct`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#MarketRun]
=== `MarketRun`


[cols="h,4",width=65%]
|===
| URI
| `cim:Market.MarketRun`
| Cardinality
| 0..*
| Type
| xref::class/MarketRun.adoc[`MarketRun`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#start]
=== `start`
+++Market start time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.start`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#status]
=== `status`
+++Market Status 
'OPEN', 'CLOSED', 'CLEARED', 'BLOCKED'+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.status`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#timeIntervalLength]
=== `timeIntervalLength`
+++Trading time interval length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.timeIntervalLength`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#tradingDay]
=== `tradingDay`
+++Market trading date+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.tradingDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#tradingPeriod]
=== `tradingPeriod`
+++Trading period that describes the market, possibilities could be for an Energy Market:
Day
Hour

For a CRR Market:
Year
Month
Season+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Market.tradingPeriod`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Market.adoc[`Market`]


|===


